# webshop

./: .gitignore  README.md  docker-compose.yml  pom.xml
backend/: Dockerfile  pom.xml
backend/src/main/java/hu/bme/aut/webshop/alf2023javant/: Alf2023JavanTApplication.java  ScheduledTask.java
backend/src/main/java/hu/bme/aut/webshop/alf2023javant/controller/: AuthController.java  (+6 more)
backend/src/main/resources/: application.properties  application.yml
backend/src/test/java/hu/bme/aut/webshop/alf2023javant/: Alf2023JavanTApplicationTests.java  SystemHealthCheckTest.java
frontend/webshop/: CMakeLists.txt  Main.qml  NewWindow.qml  loginmanager.cpp  loginmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
frontend/webshop-web/: .prettierrc  Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/webshop-web/src/: App.tsx  AuthContext.tsx  CartContext.tsx  Header.tsx  WebShopApi.ts  router.tsx  theme.ts
frontend/webshop-web/src/api/: WebShopApi.ts  api.tsx
frontend/webshop-web/src/components/: CartOverlay.tsx  Header.tsx  LoginForm.tsx  ProductCard.tsx  Root.tsx  SignUpForm.tsx  router.tsx
frontend/webshop-web/src/context/: AuthContext.tsx  CartContext.tsx
frontend/webshop-web/src/hooks/: useAuth.ts  useCart.ts
frontend/webshop-web/src/pages/: Checkout.tsx  CheckoutSuccess.tsx  Home.tsx  Login.tsx  Logout.tsx
frontend/webshop-web/src/types/: ICategory.ts  IOrder.ts  IProduct.ts
frontend/webshop-web/src/util/: currency.ts
src/main/java/hu/bme/aut/webshop/alf2023javant/: Alf2023JavanTApplication.java
(+40 files in other folders)
